<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundlogin"

    tools:context=".pages.Register">

    <EditText
        android:paddingStart="10dp"
android:textColor="@color/white"
        android:background="@drawable/des"
        android:drawablePadding="20dp"
        android:drawableLeft="@drawable/baseline_person_24"
        android:textColorHint="#F4EAEA"

        android:id="@+id/emailregister"
        android:layout_width="250dp"
        android:layout_height="74dp"
        android:hint="@string/email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.291" />


    <EditText
        android:paddingStart="10dp"
        android:inputType="textPassword"
android:textColor="@color/white"
        android:id="@+id/passwordregister"
        android:layout_width="250dp"
        android:layout_height="74dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/des"
        android:textColorHint="@color/white"
        android:drawableLeft="@drawable/baseline_key_24"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailregister" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:background="@drawable/design1"
        android:text="@string/reg_ster"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordregister"
        app:layout_constraintVertical_bias="0.419" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordregister" />

    <TextView
        android:textAlignment="center"
        android:textStyle="italic"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:id="@+id/loginNow"
        android:layout_width="209dp"
        android:layout_height="45dp"
        android:text="@string/click_here_to_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

</androidx.constraintlayout.widget.ConstraintLayout>