<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundlogin"
    tools:context=".pages.Login">

    <Button

        android:id="@+id/loginButton"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/design1"
        android:text="@string/log_n"
        app:layout_constraintEnd_toEndOf="@+id/passwordlogin"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/passwordlogin"
        app:layout_constraintTop_toBottomOf="@+id/passwordlogin" />

    <EditText
        android:paddingStart="10dp"
        android:id="@+id/passwordlogin"
        android:layout_width="250dp"
        android:layout_height="74dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/des"
        android:drawableLeft="@drawable/baseline_key_24"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"

        android:textColor="@color/white"
        android:textColorHint="#F4EAEA"
        app:layout_constraintEnd_toEndOf="@+id/emaillogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emaillogin"
        app:layout_constraintTop_toBottomOf="@+id/emaillogin" />

    <EditText
        android:paddingStart="10dp"
        android:id="@+id/emaillogin"
        android:layout_width="250dp"
        android:layout_height="74dp"
        android:layout_marginTop="196dp"
        android:background="@drawable/des"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="20dp"
        android:hint="Email"


        android:textColor="@color/white"
        android:textColorHint="#F4EAEA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordlogin" />

    <TextView
        android:id="@+id/registerNow"
        android:layout_width="230dp"
        android:layout_height="43dp"
        android:text="@string/click_here_to_register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />


</androidx.constraintlayout.widget.ConstraintLayout>